--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai": "^4.2.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
+    "fsevents": "^2.1.3",
     "mocha-multi": "^1.1.3",
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.4.2",
