--- a/package.json
+++ b/package.json
@@ -11,27 +11,31 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.1.0",
     "jsdom": "^9.9.1",
     "mocha": "^6.2.1",
-    "react-scripts": "^1.0.7",
+    "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.0.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^4.44.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "acorn-jsx": "^5.2.0",
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
     "babel-preset-airbnb": "^2.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.24.1",
+    "browserslist": "^4.14.0",
     "chai": "^4.2.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "mocha-multi": "^1.1.3",
     "react": "^16.0.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.13.1",
     "sinon": "^1.17.7"
   },
   "scripts": {
